--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -3,8 +3,7 @@
 # Add steps that publish symbols, save build artifacts, and more:
 # https://docs.microsoft.com/azure/devops/pipelines/languages/dotnet-core
 
-# name: $(Build.DefinitionName)-$(date:yyyyMMdd)$(rev:.r)--$(Major).$(Minor)
-name: $(Major).$(Minor).$(rev:rrr)
+name: 1.0.$(rev:rrr)
 
 trigger:
 - master
@@ -14,7 +13,7 @@ pool:
 
 variables:
   BuildConfiguration: 'Release'
-  Version: $(Major).$(Minor).$(Patch)-alpha1
+  Version: $(Build.BuildNumber)-alpha1
 
 
 steps:
@@ -33,7 +32,7 @@ steps:
     command: 'pack'
     packagesToPack: 'nuget/DynamoCode.Core/DynamoCode.Core.csproj'
     versioningScheme: 'off'
-    buildProperties: 'PackageVersion=$(Version)'
+    buildProperties: 'PackageVersion=$(Build.BuildNumber)'
 
 - task: PublishBuildArtifacts@1
   inputs:
