Started unification of domain projects

--- a/src/Infrastructure/DynamoCode.Infrastructure.Caching.MemoryCache/DynamoCode.Infrastructure.Caching.MemoryCache.csproj
+++ b/src/Infrastructure/DynamoCode.Infrastructure.Caching.MemoryCache/DynamoCode.Infrastructure.Caching.MemoryCache.csproj
@@ -9,7 +9,7 @@
   </ItemGroup>
 
   <ItemGroup>
-    <ProjectReference Include="..\DynamoCode.Infrastructure.Caching\DynamoCode.Infrastructure.Caching.csproj" />
+    <ProjectReference Include="..\..\Domain\DynamoCode.Domain\DynamoCode.Domain.csproj" />
   </ItemGroup>
 
 </Project>
