Temporarily disabled the nuget package creation

--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -27,32 +27,32 @@ steps:
     command: 'test'
     projects: '**/*Tests/*.csproj'
 
-# Infrastructure package 
-- task: DotNetCoreCLI@2
-  inputs:
-    command: 'pack'
-    packagesToPack: 'nuget/DynamoCode.Infrastructure/DynamoCode.Infrastructure.csproj'
-    versioningScheme: 'off'
-    buildProperties: 'PackageVersion=$(Build.BuildNumber)'
+# # Infrastructure package 
+# - task: DotNetCoreCLI@2
+#   inputs:
+#     command: 'pack'
+#     packagesToPack: 'nuget/DynamoCode.Infrastructure/DynamoCode.Infrastructure.csproj'
+#     versioningScheme: 'off'
+#     buildProperties: 'PackageVersion=$(Build.BuildNumber)'
 
-# Domain package
-- task: DotNetCoreCLI@2
-  inputs:
-    command: 'pack'
-    packagesToPack: 'src/Domain/DynamoCode.Domain/DynamoCode.Domain.csproj'
-    versioningScheme: 'off'
-    buildProperties: 'PackageVersion=$(Build.BuildNumber)'
+# # Domain package
+# - task: DotNetCoreCLI@2
+#   inputs:
+#     command: 'pack'
+#     packagesToPack: 'src/Domain/DynamoCode.Domain/DynamoCode.Domain.csproj'
+#     versioningScheme: 'off'
+#     buildProperties: 'PackageVersion=$(Build.BuildNumber)'
 
-# Application package
-- task: DotNetCoreCLI@2
-  inputs:
-    command: 'pack'
-    packagesToPack: 'nuget/DynamoCode.Core.Application/DynamoCode.Core.Application.csproj'
-    versioningScheme: 'off'
-    buildProperties: 'PackageVersion=$(Build.BuildNumber)'
+# # Application package
+# - task: DotNetCoreCLI@2
+#   inputs:
+#     command: 'pack'
+#     packagesToPack: 'nuget/DynamoCode.Core.Application/DynamoCode.Core.Application.csproj'
+#     versioningScheme: 'off'
+#     buildProperties: 'PackageVersion=$(Build.BuildNumber)'
 
-- task: PublishBuildArtifacts@1
-  inputs:
-    PathtoPublish: '$(Build.ArtifactStagingDirectory)'
-    ArtifactName: 'DynamoCodePackages'
-    publishLocation: 'Container'
+# - task: PublishBuildArtifacts@1
+#   inputs:
+#     PathtoPublish: '$(Build.ArtifactStagingDirectory)'
+#     ArtifactName: 'DynamoCodePackages'
+#     publishLocation: 'Container'
