Updated project references after moving folders

--- a/src/DynamoCode.Application/DynamoCode.Application.csproj
+++ b/src/DynamoCode.Application/DynamoCode.Application.csproj
@@ -1,7 +1,7 @@
 <Project Sdk="Microsoft.NET.Sdk">
 
   <ItemGroup>
-    <ProjectReference Include="..\..\Domain\DynamoCode.Domain\DynamoCode.Domain.csproj" />
+    <ProjectReference Include="..\DynamoCode.Domain\DynamoCode.Domain.csproj" />
   </ItemGroup>
 
   <PropertyGroup>
