--- a/src/DynamoCode.Application/DynamoCode.Application.csproj
+++ b/src/DynamoCode.Application/DynamoCode.Application.csproj
@@ -1,11 +1,14 @@
 <Project Sdk="Microsoft.NET.Sdk">
 
+  <PropertyGroup>
+    <Description>Domain Driven Design base architecture .NET Core implementation. This is the base for Application implementaion.</Description>
+    <PackageTags>ddd; domain driven design; entity; value object; base application;</PackageTags>
+  </PropertyGroup>
+
   <ItemGroup>
     <ProjectReference Include="..\DynamoCode.Domain\DynamoCode.Domain.csproj" />
   </ItemGroup>
 
-  <PropertyGroup>
-    <TargetFramework>netstandard2.1</TargetFramework>
-  </PropertyGroup>
+  <Import Project="..\..\Common.targets"/>
 
 </Project>
