--- a/src/DynamoCode.Infrastructure.Caching.MemoryCache/DynamoCode.Infrastructure.Caching.MemoryCache.csproj
+++ b/src/DynamoCode.Infrastructure.Caching.MemoryCache/DynamoCode.Infrastructure.Caching.MemoryCache.csproj
@@ -1,7 +1,8 @@
 <Project Sdk="Microsoft.NET.Sdk">
 
   <PropertyGroup>
-    <TargetFramework>netstandard2.1</TargetFramework>
+    <Description>DynamoCode implementation of Caching mechanism using Memory</Description>
+    <PackageTags>ddd; domain driven design; cache memory;</PackageTags>
   </PropertyGroup>
 
   <ItemGroup>
@@ -11,5 +12,7 @@
   <ItemGroup>
     <ProjectReference Include="..\DynamoCode.Domain\DynamoCode.Domain.csproj" />
   </ItemGroup>
+
+  <Import Project="..\..\Common.targets"/>
 
 </Project>
