Added nobuild to pack action to avoid file version out of sync with the package

--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -3,7 +3,6 @@
 # Add steps that publish symbols, save build artifacts, and more:
 # https://docs.microsoft.com/azure/devops/pipelines/languages/dotnet-core
 
-# name: $(majorMinorVersion)-alpha.$(revision)
 name: $(majorMinorVersion).$(revision)
 
 variables:
@@ -28,31 +27,13 @@ steps:
     command: 'test'
     projects: '**/*Tests/*.csproj'
 
-# Domain package
 - task: DotNetCoreCLI@2
   inputs:
     command: 'pack'
     packagesToPack: 'src/**/*.csproj;!src/Identity/**/*.csproj'
     versioningScheme: 'off'
+    nobuild: true
     buildProperties: 'PackageVersion=$(Build.BuildNumber)'
-
-# # Infrastructure package 
-# - task: DotNetCoreCLI@2
-#   inputs:
-#     command: 'pack'
-#     packagesToPack: 'nuget/DynamoCode.Infrastructure/DynamoCode.Infrastructure.csproj'
-#     versioningScheme: 'off'
-#     buildProperties: 'PackageVersion=$(Build.BuildNumber)'
-
-
-
-# # Application package
-# - task: DotNetCoreCLI@2
-#   inputs:
-#     command: 'pack'
-#     packagesToPack: 'nuget/DynamoCode.Core.Application/DynamoCode.Core.Application.csproj'
-#     versioningScheme: 'off'
-#     buildProperties: 'PackageVersion=$(Build.BuildNumber)'
 
 - task: PublishBuildArtifacts@1
   inputs:
